# Canny_18645

./: CMakeLists.txt  DEBUG_NMS.md  README.md  canny_performance_test.cpp  main.cpp  plot.py
include/: Sobel.hpp  Sobel_3x16.hpp  kernel.hpp  nms.hpp  nms.hpp.gch  ref.hpp  sobel.hpp  threshold.hpp  utils.hpp
test/: test_nms.cpp  test_performance_nms.cpp  test_performance_sobel.cpp  test_sobel.cpp  test_sobel_single.cpp
